# rust-api-s3-token

./: Cargo.toml  README.md
src/: main.rs
src/config/: db.rs
src/datasource/: mod.rs
src/model/: mod.rs  schema.rs
src/model/table/: accounts.rs
