[package]
name = "rust-api-s3-token"
version = "0.1.0"
authors = ["awallef <antoine.wallef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
rocket = "=0.4.3"
rocket_codegen = "=0.4.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "*"
diesel = { version = "=1.4.3", features = ["mysql","r2d2","numeric","64-column-tables","chrono"] }
